--- a/GCF/client/public/index.html
+++ b/GCF/client/public/index.html
@@ -10,6 +10,23 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!-- Bootstrap CSS -->
+<link
+href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+rel="stylesheet"
+integrity="sha384-ENjdO4Dr2bkBIFxQpeoijZ38K3oZNgPeMWzBn0e+Uc4upQroYz9CtUcXmgFeKDeJ"
+crossorigin="anonymous"
+/>
+
+<!-- Font Awesome for Icons -->
+<link
+rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+integrity="sha512-Fo3rlrZj/k7ujTTXRVlX3bUTh2ZZipz0kEbS6Upr7qTR44dnVx71CTvX9L3Pk8NkIXap3rPHgeXc6aDzC0LxYw=="
+crossorigin="anonymous"
+referrerpolicy="no-referrer"
+/>
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
