--- a/GCF/client/public/index.html
+++ b/GCF/client/public/index.html
@@ -18,6 +18,12 @@ integrity="sha384-ENjdO4Dr2bkBIFxQpeoijZ38K3oZNgPeMWzBn0e+Uc4upQroYz9CtUcXmgFeKD
 crossorigin="anonymous"
 />
 
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+/>
+
+
 <!-- Font Awesome for Icons -->
 <link
 rel="stylesheet"
